# papers-mixture-of-experimenters

./: .gitignore  README.md  audit.md  brief.md  metadata.yaml  research.md  review-2026-06-18.md  sources.md
docs/: CLAIM_LEDGER.md  HYPOTHESIS_RESULTS.md
paper/: PAPER.md
simulation/: README.md  pyproject.toml
simulation/mox/: __init__.py  controlled.py  data.py  fixtures.py  interventions.py  model.py  paths.py  probes.py  realmodel.py  runtime.py  sae.py  scoring.py  seeds.py  stats.py  train.py
simulation/mox/cli/: train_model.py  verify_all.py
simulation/mox/experiments/: c1_controlled_experiments.py  c2_realmodel.py  c3_attribution.py  common.py  h1_scorer_goodhart.py  h2_substrate_collateral.py  h3_invasive_vs_fork.py  h4_router.py  h5_offmanifold.py
simulation/output/: CLAIMS_SUMMARY.md
simulation/output/experiments/: c1_controlled_experiments_verification.json  c2_realmodel_pythia160m_verification.json  c3_attribution_pythia160m_verification.json  h1_scorer_goodhart_verification.json  h2_substrate_collateral_verification.json  h3_invasive_vs_fork_verification.json  h4_router_verification.json  h5_offmanifold_verification.json
